# src/quotes/quote.controller.ts
@@ -6,8 +6,8 @@ import {
   UsePipes,
   ValidationPipe,
 } from "@nestjs/common";
-import { TableNames } from "src/dyanmo/constants/TableNames.enum";
-import { DyanmoService } from "src/dyanmo/dyanmo.service";
+import { TableNames } from "src/dynamo/constants/TableNames.enum";
+import { DynamoService } from "src/dynamo/dynamo.service";
 import { Quote } from "./models/quote";
 import { QuoteInput } from "./models/quoteInput";
 import { QuoteService } from "./quote.service";
@@ -16,7 +16,7 @@ import { QuoteService } from "./quote.service";
 export class QuoteController {
   constructor(
     private readonly quoteService: QuoteService,
-    private readonly dyanmoService: DyanmoService
+    private readonly dynamoService: DynamoService
   ) {}
 
   @Post("/quote")
@@ -25,13 +25,13 @@ export class QuoteController {
     console.log("Recieved request for Quote: " + JSON.stringify(quoteInput));
     const quote: Quote = this.quoteService.createQuote(quoteInput);
     console.log("Returning Quote: " + JSON.stringify(quote));
-    const savedQuote: Quote = await this.dyanmoService.postItem(quote);
+    const savedQuote: Quote = await this.dynamoService.postItem(quote);
     return savedQuote;
   }
   @Get("/quote")
   public async getAllQuotes(): Promise<any> {
     console.log("Retrieve all clients from table");
-    const data = await this.dyanmoService.getAllItems(TableNames.QUOTE_TABLE);
+    const data = await this.dynamoService.getAllItems(TableNames.QUOTE_TABLE);
     console.log("All items from table: " + JSON.stringify(data));
     return data;
   }
